fix non-wrapping text breaking out of containers

--- a/app/public/css/layout.css
+++ b/app/public/css/layout.css
@@ -22,3 +22,11 @@ body {
 .browser-navigation-style-dropdown ul.dropdown-menu {
   width: 100%;
 }
+
+span.badge a {
+  color: yellow;
+}
+
+.list-group-item {
+  overflow-wrap: break-word;
+}
